--- a/onsei.ipynb
+++ b/onsei.ipynb
@@ -524,7 +524,8 @@
     "plt.plot(correlation2)\n",
     "plt.xlabel('sample')\n",
     "plt.ylabel('Normalized autocorrelation')\n",
-    "plt.savefig('a_correlation.png')"
+    "#plt.savefig('a_correlation.png')\n",
+    "plt.vlines(seq, ymin, ymax, colors=\"k\", linestyle=\"solid\", label=\"\")"
    ]
   },
   {
@@ -780,7 +781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
